i18n: pulling from bz

--- a/ubiquity/chrome/locale/es-ES/coreubiquity.properties
+++ b/ubiquity/chrome/locale/es-ES/coreubiquity.properties
@@ -1,34 +1,34 @@
 # This file is just a placeholder for localizations to core Ubiquity
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=Escriba el nombre de la orden y pulse intro para ejecutarla, o <string>ayuda</strong> para asistencia.
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+ubiquity.cmdutils.searchdescription=Busca %S para sus palabras
+ubiquity.cmdutils.searchcmd=Busca %S para: <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Ejecuta la miniaplicación <strong>%S</strong>.
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=¿Sabe que tiene una orden de Ubiquity para esta web?
+ubiquity.feedmanager.showme=¡Enséñamela!
+ubiquity.feedmanager.dontremind=No me lo recuerdes otra vez para esta web.
+ubiquity.feedmanager.newcommandfound=Esta página contiene órdenes de Ubiquity. Si desea suscribirse a ellas, por favor pulse el botón de la derecha.
+ubiquity.feedmanager.subscribe=Suscribirse...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=Salvar su tema
+ubiquity.skinsvc.installskin=Instalar...
+ubiquity.skinsvc.newskinfound=Esta página contiene un tema de Ubiquity. Si desea instalar el tema, por favor pulse el botón de la derecha.
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Esta página contiene un estilo Stylish que Ubiquity puede ejecutar. Si desea suscribirse a él pulse el botón de la derecha.
+ubiquity.stylishfeedplug.subscriptionsuccess=Suscripción exitosa a Userstyle.
