--- a/ubiquity/chrome/locale/fi-FI/coreubiquity.properties
+++ b/ubiquity/chrome/locale/fi-FI/coreubiquity.properties
@@ -1,34 +1,31 @@
 # This file is just a placeholder for localizations to core Ubiquity
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=Kirjoita komento ja paina Enter suorittaaksesi sen, tai kirjoita <strong>help</strong> saadaksesi ohjeita.
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=Tiesitkö, että sinulla on Ubiquity-komentoja tälle sivulle?
+ubiquity.feedmanager.showme=Näytä ne!
+ubiquity.feedmanager.dontremind=Älä muistuta uudelleen tällä sivulla
+ubiquity.feedmanager.newcommandfound=Tämä sivu sisältää Ubiquity-komentoja. Jos haluat tilata ne, napsauta painiketta oikealla.
+ubiquity.feedmanager.subscribe=Tilaa...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=Tallenna teemasi
+ubiquity.skinsvc.installskin=Asenna...
+ubiquity.skinsvc.newskinfound=Tämä sivu sisältää Ubiquity-teeman. Jos haluat asentaa sen, napsauta painiketta oikealla.
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Tämä sivu sisältää Stylish-käyttäjäteeman, jonka Ubiquity voi suorittaa. Jos haluat tilata sen, napsauta painiketta oikealla.
+ubiquity.stylishfeedplug.subscriptionsuccess=Käyttäjäteema tilattiin onnistuneesti!
