--- a/ubiquity/chrome/locale/fr/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/fr/aboutubiquitytutorial.properties
@@ -5,6 +5,7 @@ tutorial.fromthestart=Cliquer ici pour commencer depuis le début
 tutorial.fromthemiddle=Sélectionner une catégorie :
 tutorial.howtostart=Comment appeler Ubiquity
 tutorial.previews=Aperçu (commande Weather)
+tutorial.abbreviations=Abréviations (Calculate)
 tutorial.suggestions=La liste de suggestions (Calculate, Google)
 tutorial.selecting=Sélection, exécution (Translate, Map)
 tutorial.morecommands=Obtenir de l'aide et apprendre de nouvelles commandes
