--- a/ubiquity/chrome/locale/fr/devubiquity.properties
+++ b/ubiquity/chrome/locale/fr/devubiquity.properties
@@ -1,2 +1,47 @@
 # This file is just a placeholder for localizations to dev tools
 
+ubiquity.quicklaunch.sorrymessage=Désolé, mais il apparaît que vous n'utilisez pas Mac OS X. Cette fonctionnalité n'est pas encore disponible.
+ubiquity.quicklaunch.enabledefault=Activer le lancement rapide
+ubiquity.quicklaunch.enablerunning=Le lancement rapide est déjà activé.
+ubiquity.quicklaunch.enableconfirm=Le lancement rapide est maintenant activé.
+ubiquity.quicklaunch.erorr=Une erreur est survenue. Désolé !
+ubiquity.playpen.caller=terme d'appel :
+ubiquity.playpen.combo=combinaison :
+ubiquity.playpen.argstring=argString :
+ubiquity.playpen.score=score :
+ubiquity.playpen.multiplier=multiplicateur :
+ubiquity.playpen.noscore=aucun score
+ubiquity.playpen.null=null
+ubiquity.playpen.done=terminé
+ubiquity.playpen.duration=DURÉE :
+ubiquity.playpen.average=MOY :
+ubiquity.playpen.step=étape
+ubiquity.playpen.winner=vainqueur
+ubiquity.playpen.role=rôle :
+ubiquity.playpen.name=nom :
+ubiquity.playpen.nountype=type de nom :
+ubiquity.playpen.step1=étape 1 : diviser les mots
+ubiquity.playpen.step2=étape 2 : choisir les verbes possibles
+ubiquity.playpen.step3=étape 3 : choisir les clitiques possibles (À FAIRE)
+ubiquity.playpen.step4=étape 4 : grouper dans les arguments
+ubiquity.playpen.step5=étape 5 : substitution d'anaphore
+ubiquity.playpen.step6=étape 6 : substituer les arguments normalisés
+ubiquity.playpen.step7=étape 7 : applique des objets à d'autres rôles en l'absence de verbe dans la phrase analysée
+ubiquity.playpen.step8=étape 8 : suggérer des verbes
+ubiquity.playpen.step9=étape 9-11 : complétion
+ubiquity.playpen.parsespossible=analyses possibles
+ubiquity.playpen.parsedverbs=analyse des verbes
+ubiquity.playpen.parsednouns=analyser en remplaçant les suggestions des noms et en les marquant
+ubiquity.testsuite.testsingular=test
+ubiquity.testsuite.testplural=tests
+ubiquity.testsuite.runerror=Erreur lors de l'exécution des tests : %S
+ubiquity.tuner.ScoringGuess=En terme de supposition :
+ubiquity.tuner.Guess1=Discutable.
+ubiquity.tuner.Guess2=Possible.
+ubiquity.tuner.Guess3=Probable.
+ubiquity.tuner.Guess4=Parfait !
+ubiquity.tuner.ScoringMatch=En terme de correspondance :
+ubiquity.tuner.Match1=Faible.
+ubiquity.tuner.Match2=Ok.
+ubiquity.tuner.Match3=Bien.
+ubiquity.tuner.Match4=Exact !
