--- a/ubiquity/chrome/locale/ja/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquitytutorial.properties
@@ -1,129 +1,130 @@
 # ##### Tutorial start page
 
 tutorial.welcome=Ubiquity チュートリアルへようこそ。
-tutorial.fromthestart=最初から始めるにはここをクリック
-tutorial.fromthemiddle=途中から始める：
-tutorial.howtostart=Ubiquity を起動するには
-tutorial.previews=プレビュー (『weather』コマンド)
-tutorial.suggestions=候補リスト (『calculate』『Google』)
-tutorial.selecting=選択・実行 (『translate』『map』)
-tutorial.morecommands=ヘルプの参照・コマンドリスト
+tutorial.fromthestart=はじめから
+tutorial.fromthemiddle=目次
+tutorial.howtostart=Ubiquity の起動
+tutorial.previews=お天気コマンドとプレビュー
+tutorial.abbreviations=計算コマンドと入力の省略
+tutorial.suggestions=Google コマンドと入力候補
+tutorial.selecting=コマンドの選択と実行
+tutorial.morecommands=ヘルプの参照と始まりの終わり
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Ubiquity Tutorial, part 1 of 6: How to start Ubiquity
-tutorial.stage01p1=Welcome to the Ubiquity tutorial.
-tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
-tutorial.stage01p3=Hold down the
+tutorial.stage01h1=その 1 / 6: Ubiquity の起動
+tutorial.stage01p1=Ubiquity チュートリアルへようこそ。
+tutorial.stage01p2=<strong>CTRL キー (Mac は option キー、Linux は alt キー) を押しながら、Space キーを押してください。</strong>Ubiquity が起動します。
+tutorial.stage01p3=​
 ##### Stage 02
 
-tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
-tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
+tutorial.stage02p1=これが Ubiquity の<strong>入力パネル</strong>です。 コマンドの入力は、ここで行います。
+tutorial.stage02p2=問題が無ければ、<strong>ESC キーを押してください</strong>。何もせず、Ubiquity が閉じられます。
 ##### Stage 03 (part 2 of 6) #####
 
-tutorial.stage03h1=Ubiquity Tutorial, part 2 of 6: Weather command and Previews
-tutorial.stage03p1=OK, so now let's learn a command. Summon Ubiquity again...
-tutorial.stage03p2=(Remember, <strong>hold down the
+tutorial.stage03h1=その 2 / 6: お天気コマンドとプレビュー
+tutorial.stage03p1=まずはコマンドを使ってみましょう。
+tutorial.stage03p2=<strong>CTRL キー (Mac は option キー、Linux は alt キー) を押しながら、Space キーを押してください。</strong>Ubiquity が起動します。
 ##### Stage 04
 
-tutorial.stage04p1=Now type the word <strong>weather</strong>...
+tutorial.stage04p1=続いて、<strong>weather</strong> と入力してみてください。
 ##### Stage 05
 
-tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
-tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
-tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
+tutorial.stage05p1=タイプし終わる前から、<strong>プレビューエリア</strong> にコマンドの実行結果が表示されました。今回は、天気予報です。
+tutorial.stage05p2=<em>weather</em> コマンドは、住所 (location) を入力しなくても、テキトーに結果が出ます。
+tutorial.stage05p3=では、住所を入力するとどうなるでしょう? <strong>半角スペースを入力し、続けて 'near chicago' と入力してみてください</strong>。 (全部で 'weather near chicago' です。)
 ##### Stage 06
 
-tutorial.stage06p1=See how that works?  Feel free to delete &quot;chicago&quot; and try some other locations.
-tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
+tutorial.stage06p1=動きましたか？ 'chicago' は他の色々な住所でもお試しいただけます。
+tutorial.stage06p2=確認できたら、 <strong>escape キーを押してください。</strong>
 ##### Stage 07 (part 3 of 6) #####
 
-tutorial.stage07h1=Ubiquity Tutorial, part 3 of 6: Calculate command and Abbreviations
-tutorial.stage07p1=Summon Ubiquity again, and we'll learn some more commands.
+tutorial.stage07h1=その 3 / 6: 計算コマンドと入力の省略
+tutorial.stage07p1=次のコマンドに行きましょう。Ubiquity を起動してください。
 ##### Stage 08
 
-tutorial.stage08p1=This time, <strong>type just the letter 'c'</strong> (lower-case) and see what happens.
+tutorial.stage08p1=今回は、<strong>'c'</strong> (小文字) とだけ打ってみてください。
 ##### Stage 09
 
-tutorial.stage09p1=The Ubiquity <strong>suggestion list</strong> displays commands that start with the letter 'C'.
-tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't have to type the whole command name.  Just <strong>type the letters 'al'</strong> (so that your input says <strong>'cal'</strong>).
+tutorial.stage09p1=Ubiquity は、'c' で始まるコマンドの一覧を表示する機能を持っています。いわゆる<strong>入力候補</strong>です。
+tutorial.stage09p2=<em>calculate</em> (計算) コマンドを実行してみましょう。と言っても、<strong>'calculate'</strong> と入力する必要はありません。 c に続けて<strong>'al'</strong> と打ち込むだけです。(全部で <strong>'cal'</strong>。)
 ##### Stage 10
 
-tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
+tutorial.stage10p1=さらに続けて、<strong>半角スペース、'22/7' と入力してみてください。</strong> (ここまでで入力ボックスは <strong>'cal 22/7'</strong> となっているはずです。)
 ##### Stage 11
 
-tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
-tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
+tutorial.stage11p1=22+7、22-7、22*7、(11+11)*7。
+tutorial.stage11p2=入力された計算式の結果を確認できたら、<strong>escape キーを押してください。</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
-tutorial.stage12p1=Summon Ubiquity again...
+tutorial.stage12h1=その 4 / 6: Google コマンドと入力候補
+tutorial.stage12p1=Ubiquity を起動してください。
 ##### Stage 13
 
-tutorial.stage13p1=Let's say you want to search Google for cheese.
-tutorial.stage13p2=Type the letter 'g', a space, and the word 'cheese'.
-tutorial.stage13p3=(Like, 'g cheese').
+tutorial.stage13p1=Google で、cheese を検索したいとします。
+tutorial.stage13p2='g'、半角スペース、'cheese' と入力してください。
+tutorial.stage13p3=('g cheese' と、入力する事になります。)
 ##### Stage 14
 
-tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
-tutorial.stage14p2=<strong>tap the down-arrow key</strong> until the <em>google</em> command is hilighted.
+tutorial.stage14p1='g' で始まる様々なコマンドが、入力候補として表示されます。↑キーと↓キーで、これらを選択してみましょう。
+tutorial.stage14p2=<strong>↓キー</strong> で移動し、<em>google</em> コマンドにフォーカスを合わせてください。
 ##### Stage 15
 
-tutorial.stage15p1=The <em>Google</em> command preview shows a snippet from each search result matching your search term.
-tutorial.stage15p2=Those titles are links &#8212; you can click on one of them to open the page in a new tab.
-tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
+tutorial.stage15p1=<em>Google</em> コマンドのプレビューでは、検索結果の一部が表示されます。
+tutorial.stage15p2=結果のタイトルはリンクになっており、クリックすると新しいタブでそのページを開きます。
+tutorial.stage15p3=チュートリアルはまだ続きます。一休みしたら、ページを閉じて戻ってくるか、 <strong>ESC キーを押してください</strong>。
 ##### Stage 16 (part 5 of 6) #####
 
-tutorial.stage16ah1=Part 5 of 6: Selecting and Executing
-tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
-tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
-tutorial.stage16bp1=Now <strong>type 'map'</strong>.
-tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
-tutorial.stage16cp2=When you're done trying out the map, <strong>hit escape</strong>.
+tutorial.stage16ah1=その 5 / 6 コマンドの選択と実行
+tutorial.stage16ap1=以下に表示されている住所を、地図で確認したいとします。
+tutorial.stage16ap2=<strong>マウスをドラッグして以下の住所を選択し、Ubiquity を起動してください。</strong>
+tutorial.stage16bp1=<strong>'map' と入力してみてください。</strong>
+tutorial.stage16cp1=プレビューに Google マップの地図が表示されました。 地図をクリックして拡大し、マウスドラッグでスクロールさせる事もできます。お試しください。
+tutorial.stage16cp2=map コマンドを使い終わったら、<strong>ESC キー</strong>を押してください。
 ##### Stage 17
 
-tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
-tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
-tutorial.stage17p3=(type 'translate', or just 'tr').
+tutorial.stage17p1=さて、インターネットで英語圏の人に出会ったとします。でも、Ubiquity があれば、割と平気です。
+tutorial.stage17p2=まず、<strong>以下の文章をマウスドラッグで選択</strong>し、 Ubiquity を起動してください。今回は、 <strong><em>translate</em> コマンドを利用します</strong>。
+tutorial.stage17p3=('translate to English' 、または単に 'tr to en' と入力してみてください)。
 ##### Stage 18
 
-tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
-tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
+tutorial.stage18p1=通常、translate コマンドは、翻訳したい文章をコマンドに続けて入力する事で利用します。ただしプレビューをご覧の通り、選択した文章に対して動作させることもできます。
+tutorial.stage18p2=確認できたら、<strong>Enter キー</strong>を押してコマンドを実行してみてください。
 ##### Stage 19
 
-tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
-tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
-tutorial.stage19p3=Click here to continue
+tutorial.stage19p1=選択されていた日本語の文章が、<em>差し替えられました</em>。Enter キーを押したことで、コマンドが「実行」されたからです。
+tutorial.stage19p2=大抵のコマンドは、様々な形で「実行」することができます。一般的には、新しいページが開かれるか、現在のページに対して何らかの変化がもたらされます。
+tutorial.stage19p3=続けるにはここをクリック！
 ##### Stage 20
 
-tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
-tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
+tutorial.stage20p1=もう一つだけ例を示します。以下にあるような、よく分からない単語に出くわし、ググろうかなと考えたとします。
+tutorial.stage20p2=以下の文章をマウスドラッグで選択し、Ubiquity を起動してください。
 ##### Stage 21
 
-tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
+tutorial.stage21p1=<strong>google コマンドを使用します</strong>。 ('google' または単に 'goo' と入力してください)。
 ##### Stage 22
 
-tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
-tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
-tutorial.stage22p3=It's up to you.
+tutorial.stage22p1=<em>google</em> のプレビューが十分な内容であれば、ESC キーを押して終了です。
+tutorial.stage22p2=もう少し情報が欲しい場合、Enter キーで <em>google</em> コマンドを実行すれば、検索結果のページにジャンプできます。
+tutorial.stage22p3=簡単でしょう？
 ##### Stage 23 (part 6 of 6) #####
 
-tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
-tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
-tutorial.stage23p2=How will you find out what commands are available?
-tutorial.stage23p3=One way is by using the <em>help</em> command.
-tutorial.stage23p4=Summon Ubiquity...
+tutorial.stage23h1=その 6 / 6: ヘルプの参照と始まりの終わり
+tutorial.stage23p1=最終章です。<em>weather</em>、<em>calculate</em>、<em>google</em>、<em>translate</em>、<em>map</em>。 始めたばかりなのに、5 つもコマンドが使いこなせるようになりました。実は、 Ubiquity にはデフォルトでもっと沢山のコマンドがインストールされています。さらに言うと、インターネットにはもっともっと沢山の便利なコマンドが公開されていたりします。
+tutorial.stage23p2=どうすればそれらに出会う事ができるのでしょうか？
+tutorial.stage23p3=<em>help</em> コマンドを使ってみましょう。
+tutorial.stage23p4=Ubiquity を起動してください。
 ##### Stage 24
 
-tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
-tutorial.stage24p2=type 'help tab'.
+tutorial.stage24p1=Firefox のタブに対して、何かするコマンドがあるか調べたいとします。<em>help</em> コマンドの利用例を示します。
+tutorial.stage24p2='help tab' と入力してみてください。
 ##### Stage 25
 
-tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
-tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
-tutorial.stage25p3=When you're done, <strong>tap escape</strong>.
+tutorial.stage25p1=インストールされているすべてのコマンドの中から、コマンド名に 'tab' が含まれるものが入力候補に表示されました。
+tutorial.stage25p2=矢印キーで入力候補を選択すると、それぞれの使用方法がプレビューに表示されます。
+tutorial.stage25p3=確認が終わったら、<strong>ESC キー</strong>を押してください。
 ##### Stage 26
 
-tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
-tutorial.stage26p2=This is the end of the tutorial. Once you go to the command list page, you are on your own to experiment and learn new commands at your own pace.
-tutorial.stage26p3=Summon Ubiquity, type 'list', and tap the enter key to execute.
-tutorial.stage26p4=Good-bye!
+tutorial.stage26p1=最後に、<em>list ubiquity commands</em> と言うコマンドの説明をします。このコマンドを使えば、Ubiquity にインストールされているすべてのコマンドが表示されるページにジャンプする事ができます。情報量の多さに驚かれるかもしれません。でも、これは Ubiquity の持っている可能性の、ほんの一部に過ぎないのです。
+tutorial.stage26p2=チュートリアルはこれで終わりです。知らなかったコマンドの使い方に触れるのもよし、飽き足らず自分でコマンドを作ってしまうもよし。楽しんでください。
+tutorial.stage26p3=Ubiquity を起動し、'list' と入力し、Enter キーで実行してください。
+tutorial.stage26p4=また、どこかでお会いしましょう。
