--- a/ubiquity/chrome/locale/pl-PL/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/aboutubiquity.properties
@@ -1,6 +1,6 @@
 ############################
 
-# headers.js
+# /chrome/content/headers.js
 
 # Used in all about:ubiquity headers.
 
@@ -12,43 +12,43 @@ ubiquity.nav.support=Wsparcie techniczne
 ubiquity.nav.hackubiquity=Modyfikuj Ubiquity
 ############################
 
-############################
+# /chrome/content/localization-template.js
 
-# prefkeys.js
+# /chrome/content/cmdlist.js
 
-# chrome://ubiquity/content/settings.xhtml
+#
 
-############################
+# chrome://ubiquity/content/localization-template.xhtml
 
-# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
+# chrome://ubiquity/content/cmdlist.xhtml
 
-# After a change occurs this is the confirmation along with modifier names
+#
 
-# These are not yet attached, see prefkeys.js for details.
+# the "show/hide help" messages.
 
 ubiquity.showhidehelp.show=Wyświetl pomoc
 ubiquity.showhidehelp.hide=Ukryj pomoc
 # Binding and feedback does not work when applied.
 
-# Key Combo Input for settings.xhtml (one-liner input focus)
-
 ############################
 
-# confirm-add-js.js
+# /chrome/content/prefkeys.js
 
-# chrome://ubiquity/content/confirm-add-command.xhtml
+# chrome://ubiquity/content/settings.xhtml
+
+# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
 ubiquity.prefkeys.notifybadmodifier=Musisz mieć modyfikator np. Shift, Ctrl, Alt lub Meta.
 ubiquity.prefkeys.clickhere=Kliknij tutaj, aby zmienić skrót
 ubiquity.prefkeys.confirmchange=Skrót został zmieniony na
-############################
+# Key Combo Input for settings.xhtml (one-liner input focus)
 
 ubiquity.prefkeys.pressyourcombo=Naciśnij swoją kombinację klawiszy…
 ############################
 
-# localization-template.js
+# /chrome/content/cmdlist.js
 
-# chrome://ubiquity/content/localization-template.xhtml
+# chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=anuluj subskrypcję
 ubiquity.cmdlist.feedupdated=Jest dostępna aktualizacja dla tego kanału.
@@ -64,19 +64,19 @@ ubiquity.cmdlist.viewmoreinfo=zobacz więcej informacji na %S
 ubiquity.cmdlist.oldparsertitle=To polecenie nie zostało wczytane, ponieważ jest niekompatybilne z Parser 2.
 ubiquity.cmdlist.resubscribe=subskrybuj ponownie
 ubiquity.cmdlist.purge=wyczyść
-#
+############################
 
-# cmdlist.js
+# /chrome/content/confirm-add-js.js
 
-# chrome://ubiquity/content/cmdlist.xhtml
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
 ubiquity.subscription.successtitle=Dokonano subskrypcji kanału poleceń Ubiquity
 ubiquity.subscription.successheader=Dokonano subskrypcji
-#
-
-# the "show/hide help" messages.
-
 ############################
+
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
 
 ubiquity.settings.restartfirefox=Zmiana zostanie zastosowana po ponownym uruchomieniu Firefoksa.
 ubiquity.settings.opennewwindows=miana zostanie zastosowana po otwarciu nowego okna.
