--- a/ubiquity/chrome/locale/pl-PL/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pl-PL/aboutubiquitytutorial.properties
@@ -5,6 +5,7 @@ tutorial.fromthestart=Kliknij tutaj, aby rozpocząć od początku
 tutorial.fromthemiddle=Rozpocznij od:
 tutorial.howtostart=Jak uruchomić Ubiquity
 tutorial.previews=Podglądy (Polecenie „weather”)
+tutorial.abbreviations=Skróty(Calculate)
 tutorial.suggestions=Lista sugestii (Calculate, Google)
 tutorial.selecting=Zaznaczanie, wykonywanie (Translate, Map)
 tutorial.morecommands=Gdzie otrzymać pomoc i dowiedzieć się więcej o poleceniach
@@ -13,7 +14,7 @@ tutorial.morecommands=Gdzie otrzymać pomoc i dowiedzieć się więcej o polecen
 tutorial.stage01h1=Poradnik Ubiquity. Część 1 z 6: Jak uruchomić Ubiquity
 tutorial.stage01p1=Witamy w poradniku Ubiquity.
 tutorial.stage01p2=Zaczynamy! Aby wywołać Ubiquity:
-tutorial.stage01p3=Naciśnij i przytrzymaj klawisz
+tutorial.stage01p3=Przytrzymaj klawisz %S i naciśnij klawisz %S.
 ##### Stage 02
 
 tutorial.stage02p1=To jest <strong>pole wprowadzania</strong> Ubiquity. Tutaj możesz wprowadzać polecenia.
@@ -22,7 +23,7 @@ tutorial.stage02p2=Jeśli chcesz opuścić Ubiquity bez wydawania polecenia, <st
 
 tutorial.stage03h1=Poradnik Ubiquity. Część 2 z 6: Polecenia Pogoda i podglądy
 tutorial.stage03p1=OK, teraz nauczymy się poleceń. Przywołaj Ubiquity ponownie…
-tutorial.stage03p2=(Pamiętaj – <strong>przytrzymaj klawisz
+tutorial.stage03p2=(Pamiętaj – <strong>przytrzymaj klawisz %S i naciśnij klawisz %S</strong>.)
 ##### Stage 04
 
 tutorial.stage04p1=Teraz wpisz słowo <strong>weather</strong>…
@@ -92,7 +93,7 @@ tutorial.stage18p2=Następnie, <strong>naciśnij klawisz [Enter]</strong>, aby w
 
 tutorial.stage19p1=Zauważ, jak zaznaczony przez Ciebie japoński tekst został <em>zamieniony</em> na tłumaczenie. To dlatego, że polecenie zostało wykonane poprzez naciśnięcie klawisza [Enter].
 tutorial.stage19p2=Każde polecenie wykonuje coś innego, gdy jest wywoływane przez naciśnięcie klawisza [Enter]. Najczęściej będzie otwierało nową stronę lub zmieniało coś na aktywnej stronie.
-tutorial.stage19p3=Kliknij tutaj, aby kontynuować.
+tutorial.stage19p3=Kliknij tutaj, aby kontynuować
 ##### Stage 20
 
 tutorial.stage20p1=Wykonajmy jeszcze jedno ćwiczenie. Przeglądając Internet, natknąłeś się na nieznane słowo – takie jak to znajdujące się poniżej – i chciałbyś je wyszukać.
