--- a/ubiquity/chrome/locale/pl-PL/devubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/devubiquity.properties
@@ -1,2 +1,63 @@
-# This file is just a placeholder for localizations to dev tools
+############################
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
+ubiquity.quicklaunch.sorrymessage=Wygląda na to, że nie używasz systemu OS X. Ta funkcja nie jest jeszcze dostępna dla Twojego systemuh.
+ubiquity.quicklaunch.enabledefault=Włącz Desktop QuickLaunch
+ubiquity.quicklaunch.enablerunning=Desktop QuickLaunch jest już włączony.
+ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch jest teraz włączony.
+ubiquity.quicklaunch.erorr=Upss, Wystąpił błąd. Przepraszamy!
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
+ubiquity.playpen.caller=caller:
+ubiquity.playpen.combo=combination:
+ubiquity.playpen.argstring=argString:
+ubiquity.playpen.score=wynik:
+ubiquity.playpen.multiplier=multiplier:
+ubiquity.playpen.noscore=brak wyników
+ubiquity.playpen.null=nieważny
+ubiquity.playpen.done=zakończono
+ubiquity.playpen.duration=Czas trwania:
+ubiquity.playpen.average=Średnia:
+ubiquity.playpen.step=krok
+ubiquity.playpen.winner=zwycięzca
+ubiquity.playpen.role=rola:
+ubiquity.playpen.name=nazwa:
+ubiquity.playpen.nountype=nountype:
+ubiquity.playpen.step1=krok 1: rozdzielanie słów
+ubiquity.playpen.step2=krok 2: wskazywanie możliwych czasowniki
+ubiquity.playpen.step3=krok 3: wskazywanie możliwych clitics (TODO)
+ubiquity.playpen.step4=krok 4: grupowanie do argumentów
+ubiquity.playpen.step5=krok 5: zastępowanie anafory
+ubiquity.playpen.step6=krok 6: zastępowanie znormalizowanych argumentów
+ubiquity.playpen.step7=krok 7: zastosowywanie obietów do innych ról dla parsowania bez czasowników
+ubiquity.playpen.step8=krok 8: sugerowanie czasowników
+ubiquity.playpen.step9=krok 9-11: kompletowanie
+ubiquity.playpen.parsespossible=możliwe parsowania
+ubiquity.playpen.parsedverbs=parsowania z czasownikami
+ubiquity.playpen.parsednouns=parsowania z zamienionymi i najwyższymi sugestiami rzeczowników
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
+ubiquity.testsuite.testsingular=test
+ubiquity.testsuite.testplural=testy
+ubiquity.testsuite.runerror=Błąd podczas uruchamiania zestawu testów: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
+ubiquity.tuner.ScoringGuess=W kategoriach domniemania:
+ubiquity.tuner.Guess1=Wątpliwe.
+ubiquity.tuner.Guess2=Możliwe.
+ubiquity.tuner.Guess3=Prawdopodobne.
+ubiquity.tuner.Guess4=Doskonałe!
+ubiquity.tuner.ScoringMatch=W kategoriach dopasowania:
+ubiquity.tuner.Match1=Słabe.
+ubiquity.tuner.Match2=W porządku.
+ubiquity.tuner.Match3=Dobre.
+ubiquity.tuner.Match4=Idealne!
