--- a/ubiquity/chrome/locale/pt-PT/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pt-PT/aboutubiquitytutorial.properties
@@ -1,77 +1,78 @@
-###### Tutorial start page
+#
 
 tutorial.welcome=Bem-vindo ao Tutorial do Ubiquity.
 tutorial.fromthestart=Clique aqui para começar do início
 tutorial.fromthemiddle=Começar do meio:
 tutorial.howtostart=Como iniciar o Ubiquity
 tutorial.previews=Pré-visualizações (Comando tempo)
+tutorial.abbreviations=Abreviaturas (Calcular)
 tutorial.suggestions=A Lista de Sugestões (calcular, google)
 tutorial.selecting=Seleccionar, executar (traduzir, mapa)
 tutorial.morecommands=Como obter ajuda e aprender mais comandos
-##### Stage 01 (part 1 of 6) #####
+#
 
 tutorial.stage01h1=Tutorial do Ubiquity, parte 1 de 6: Como iniciar o Ubiquity
 tutorial.stage01p1=Bem-vindo ao tutorial do Ubiquity.
 tutorial.stage01p2=Vamos começar. Para chamar o Ubiquity, faça isto:
-tutorial.stage01p3=Mantenha pressionada a tecla
-##### Stage 02
+tutorial.stage01p3=Mantenha pressionada a tecla %S e carregue na tecla %S.
+#
 
 tutorial.stage02p1=Esta é a <strong>caixa</strong> do Ubiquity. Pode digitar os comandos aqui.
 tutorial.stage02p2=Se quiser sair do Ubiquity sem utilizar nem comando, <strong>carregue na tecla Escape</strong>. Tente agora.
-##### Stage 03 (part 2 of 6) #####
+#
 
 tutorial.stage03h1=Tutorial do Ubiquity, parte 2 de 6: Comando tempo e Pré-visualizações
 tutorial.stage03p1=OK, agora vamos aprender um comando. Chame o Ubiquity novamente...
-tutorial.stage03p2=(Lembre-se, <strong>mantenha pressionada a tecla
-##### Stage 04
+tutorial.stage03p2=(Lembre-se, <strong>mantenha pressionada a tecla %S e carregue na tecla %S</strong>.)
+#
 
 tutorial.stage04p1=Agora escreva a palavra <strong>tempo</strong>...
-##### Stage 05
+#
 
 tutorial.stage05p1=Mesmo antes que acabe de escrever, a <strong>área de pré-visualização</strong> mostra uma ante-visão dos resultados do seu comando — neste caso, um boletim meteorológico.
 tutorial.stage05p2=Se não inserir uma localização, o comando <em>tempo</em> tenta adivinhar a sua localização.
 tutorial.stage05p3=Agora vamos atribuir uma localização: <strong>dê um espaço e, de seguida, escreva 'near chicago'</strong>. (Portanto, todo o seu comando vai dizer: 'tempo near chicago').
-##### Stage 06
+#
 
 tutorial.stage06p1=Viu como funcionou? Sinta-se à vontade para apagar "near chicago" e experimentar outras localizações.
 tutorial.stage06p2=Quando acabar de explorar o comando tempo, <strong>carregue na tecla escape.</strong>
-##### Stage 07 (part 3 of 6) #####
+#
 
 tutorial.stage07h1=Tutorial do Ubiquity, parte 3 de 6: Comando calcular e abreviações
 tutorial.stage07p1=Chame o Ubiquity novamente, e vamos aprender mais uns comandos.
-##### Stage 08
+#
 
 tutorial.stage08p1=Desta vez, <strong>escreva apenas a letra 'c'</strong>(minúscula) e veja o que acontece.
-##### Stage 09
+#
 
 tutorial.stage09p1=A <strong>lista de sugestões</strong> do Ubiquity mostra comandos começados pela letra 'C'.
 tutorial.stage09p2=Digamos que quer o comando <em>calcular</em>. Não tem que escrever o nome inteiro. <strong>Adicione apenas as letras 'al'</strong>(para que o seu comando diga <strong>'cal'</strong>).
-##### Stage 10
+#
 
 tutorial.stage10p1=Agora <strong>dê um espaço, e escreva 22/7</strong> (para que o seu comando diga <strong>'cal 22/7'</strong>.)
-##### Stage 11
+#
 
 tutorial.stage11p1=O comando <em>calcular</em> vai mostrar-lhe o resultado de qualquer expressão aritmética que escreva.
 tutorial.stage11p2=Quando acabar de explorar o comando <em>calcular</em>, <strong>carregue na tecla escape.</strong>
-##### Stage 12 (part 4 of 6) #####
+#
 
 tutorial.stage12h1=Tutorial do Ubiquity, parte 4 de 6: Comando google e a lista de sugestões
 tutorial.stage12p1=Chame o Ubiquity novamente...
-##### Stage 13
+#
 
 tutorial.stage13p1=Digamos que quer pesquisar no Google por queijo.
 tutorial.stage13p2=Escreva a letra 'g', espaço, e a palavra 'cheese'.
 tutorial.stage13p3=(Como, 'g cheese').
-##### Stage 14
+#
 
 tutorial.stage14p1=Na lista de sugestões, pode ver vários comandos que começam com 'g'. Use as setas para baixo e para cima, para se mover pela lista de sugestões. Tente isto:
 tutorial.stage14p2=<strong>carregue na tecla da seta para baixo</strong> até que o comando <em>google</em> esteja destacado.
-##### Stage 15
+#
 
 tutorial.stage15p1=O comando <em>Google</em> mostra um extracto de cada resultado correspondente ao seu termo de procura.
 tutorial.stage15p2=Esses títulos são links — pode clicar num deles para abrir a página num novo separador.
 tutorial.stage15p3=Quando acabar, feche essa página e volte aqui, ou <strong>carregue escape</strong> para continuar com o tutorial.
-##### Stage 16 (part 5 of 6) #####
+#
 
 tutorial.stage16ah1=Parte 5 de 6: Seleccionar e Executar
 tutorial.stage16ap1=Digamos que está a navegar na web e depara-se com uma morada — como uma na caixa abaixo — e gostava de a ver num mapa.
@@ -79,49 +80,49 @@ tutorial.stage16ap2=Os comandos do Ubiquity podem funcionar com o texto seleccio
 tutorial.stage16bp1=Agora <strong>escreva 'mapa'</strong>.
 tutorial.stage16cp1=A pré-visualização mostra a morada no Google Maps. Pode clicar no mapa para o aumentar; depois pode mover-se pelo mapa, arrastando-o. Tente agora.
 tutorial.stage16cp2=Quando acabar de experimentar o mapa, <strong>carregue escape</strong>.
-##### Stage 17
+#
 
 tutorial.stage17p1=Como outro exemplo, digamos que está a navegar na web e depara-se com alguma coisa escrita numa língua que não consegue ler — como o texto em Japonês abaixo. Pode usar o Ubiquity para o traduzir.
 tutorial.stage17p2=Primeiro <strong>seleccione o texto Japonês abaixo</strong>, segundo, chame o Ubiquity e <strong>use o comando <em>traduzir</em></strong>.
 tutorial.stage17p3=(escreva 'traduzir', ou apenas 'tr').
-##### Stage 18
+#
 
 tutorial.stage18p1=Nesta altura, pode escrever as palavras que seja traduzir com o Ubiquity. Mas como pode ver na área de pré-visualização, o Ubiquity já traduziu as palavras que tem seleccionadas.
 tutorial.stage18p2=Em seguida,<strong>carregue na tecla enter</strong> para executar o comando.
-##### Stage 19
+#
 
 tutorial.stage19p1=Observe como o texto em Japonês seleccionado foi <em>substituído</em> com a tradução. Isto aconteceu porque executou o comando ao pressionar 'enter'.
 tutorial.stage19p2=Cada comando faz algo diferente quando o executa. O mais frequente, é abrir uma nova página, ou mudar algo na página actual.
 tutorial.stage19p3=Clique aqui para continuar
-##### Stage 20
+#
 
 tutorial.stage20p1=Vamos ver mais um exemplo. Digamos que está a navegar na web e depara-se com um termo desconhecido — como este na caixa abaixo — e gostaria de procurar o seu significado.
 tutorial.stage20p2=Seleccione a palavra na caixa abaixo e chame o Ubiquity.
-##### Stage 21
+#
 
 tutorial.stage21p1=Agora <strong>use o comando google</strong> (escreva 'google' ou só 'goo').
-##### Stage 22
+#
 
 tutorial.stage22p1=Agora, se na pré-visualização do comando <em>google</em> encontrar o que procura, então acabou — pode fechar o Ubiquity e continuar o que estava a fazer.
 tutorial.stage22p2=Mas se quiser mais informação, carregue na tecla enter para executar o comando <em>google</em>, que vai abrir os resultados da procura numa nova página.
 tutorial.stage22p3=Você é que decide.
-##### Stage 23 (part 6 of 6) #####
+#
 
 tutorial.stage23h1=Parte 5 de 6: Como obter ajuda e aprender mais comandos
 tutorial.stage23p1=Até agora já aprendeu os comandos <em>tempo</em>, <em>calcular</em>, <em>google</em>, <em>traduzir</em>, e <em>mapa</em>. É um bom começo, mas existem dezenas de comandos incluídos no Ubiquity — e ainda pode encontrar mais na Web.
 tutorial.stage23p2=Como é que vai descobrir que comandos que estão disponíveis?
 tutorial.stage23p3=Uma maneira é usar o comando <em>ajuda</em>.
 tutorial.stage23p4=Chame o Ubiquity...
-##### Stage 24
+#
 
 tutorial.stage24p1=Suponha que quer saber se existem comandos que lidam com separadores. Pode usar o comando <em>ajuda</em> assim:
 tutorial.stage24p2=escreva 'ajuda tab'
-##### Stage 25
+#
 
 tutorial.stage25p1=Na lista de sugestões, pode ver os comandos que têm 'tab' no nome.
 tutorial.stage25p2=Use as teclas das setas para se mover pela lista de sugestões. A área de pré-visualização mostra informação sobre cada comando que for destacado.
 tutorial.stage25p3=Quando acabar, <strong>carregue escape</strong>.
-##### Stage 26
+#
 
 tutorial.stage26p1=Por fim, existe o comando <em>lista comandos do ubiquity</em>. Este comando vai leva-lo à página que mostra todos os comandos que o Ubiquity tem instalado. Pode aprender todo o tipo de coisas úteis ao navegar pela página da lista de comandos!
 tutorial.stage26p2=Este é o fim do tutorial. Quando for à página da lista de comandos, está à vontade para experimentar e aprender novos comandos ao seu ritmo.
