--- a/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
@@ -1,34 +1,36 @@
-############################
+extensions.ubiquity@labs.mozilla.com.description=Um extra que permite o uso de comandos dinâmicos no Firefox.
+#
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=Escreva o nome de um comando e carregue enter para executá-lo, ou <strong>ajuda</strong> para obter assistência.
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+ubiquity.cmdutils.searchdescription=Pesquisa %S pelas suas palavras.
+ubiquity.cmdutils.searchcmd=Pesquisa %S por: <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=Sabia que o Ubiquity tem um comando para este website?
+ubiquity.feedmanager.showme=Mostrar!
+ubiquity.feedmanager.dontremind=Não me lembrar novamente para este site
+ubiquity.feedmanager.newcommandfound=Esta página contem comandos do Ubiquity. Se deseja subscrevê-los, carregue no botão à direita.
+ubiquity.feedmanager.subscribe=Subscrever...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=Guarde o seu tema
+ubiquity.skinsvc.installskin=Instalar...
+ubiquity.skinsvc.newskinfound=Esta página contem um tema do Ubiquity. Se deseja instalá-lo, carregue no botão à direita.
+ubiquity.skinsvc.skinchanged=O seu tema foi mudado!
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Esta página contem um estilo do Stylish para o Ubiquity. Se deseja subscrevê-lo, carregue no botão à direita.
+ubiquity.stylishfeedplug.subscriptionsuccess=Estilo subscrito com sucesso!
