--- a/ubiquity/chrome/locale/pt-PT/devubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/devubiquity.properties
@@ -1,1 +1,47 @@
-# This file is just a placeholder for localizations to dev tools
+#
+
+ubiquity.quicklaunch.sorrymessage=Desculpe, mas parece que não está a usar o Mac OS X. Esta funcionalidade ainda não está disponível.
+ubiquity.quicklaunch.enabledefault=Activar Iniciação Rápida
+ubiquity.quicklaunch.enablerunning=A Iniciação Rápida já está activa.
+ubiquity.quicklaunch.enableconfirm=A Iniciação Rápida está agora activa.
+ubiquity.quicklaunch.erorr=Ocorreu um erro. Desculpe!
+ubiquity.playpen.caller=chamador:
+ubiquity.playpen.combo=combinação:
+ubiquity.playpen.argstring=argString:
+ubiquity.playpen.score=pontuação:
+ubiquity.playpen.multiplier=multiplicador:
+ubiquity.playpen.noscore=sem pontuação
+ubiquity.playpen.null=nulo
+ubiquity.playpen.done=terminado
+ubiquity.playpen.duration=DURAÇÃO:
+ubiquity.playpen.average=MÉDIA:
+ubiquity.playpen.step=passo
+ubiquity.playpen.winner=vencedor
+ubiquity.playpen.role=papel:
+ubiquity.playpen.name=nome:
+ubiquity.playpen.nountype=tipo de substantivo:
+ubiquity.playpen.step1=passo 1: dividir as palavras
+ubiquity.playpen.step2=passo 2: escolher verbos possíveis
+ubiquity.playpen.step3=passo 3: escolher clíticos possíveis (A FAZER)
+ubiquity.playpen.step4=passo 4: agrupar argumentos
+ubiquity.playpen.step5=passo 5: substituição de anáfora
+ubiquity.playpen.step6=passo 6: substituir argumentos normalizados
+ubiquity.playpen.step7=passo 7: aplicar objetos de outros papéis para análises sem verbo
+ubiquity.playpen.step8=passo 8: sugerir verbos
+ubiquity.playpen.step9=passo 9-11: conclusão
+ubiquity.playpen.parsespossible=análises possíveis
+ubiquity.playpen.parsedverbs=análises com verbos
+ubiquity.playpen.parsednouns=análises com sugestão de substantivo trocado, e pontuado
+ubiquity.testsuite.testsingular=teste
+ubiquity.testsuite.testplural=testes
+ubiquity.testsuite.runerror=Erro ao excutar a suite de testes: %S
+ubiquity.tuner.ScoringGuess=Em termos de um palpite:
+ubiquity.tuner.Guess1=Questionável.
+ubiquity.tuner.Guess2=Possível.
+ubiquity.tuner.Guess3=Provável.
+ubiquity.tuner.Guess4=Perfeito!
+ubiquity.tuner.ScoringMatch=Em termos de uma correspondência:
+ubiquity.tuner.Match1=Pobre.
+ubiquity.tuner.Match2=Ok.
+ubiquity.tuner.Match3=Bom.
+ubiquity.tuner.Match4=Exacto!
