--- a/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
@@ -1,34 +1,36 @@
-############################
+extensions.ubiquity@labs.mozilla.com.description=Расширение, позволяющее выполнять команды в Firefox.
+#
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=Введите <strong>help</strong>, чтобы получить справку, или имя команды, и нажмите Enter, чтобы её выполнить.
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+ubiquity.cmdutils.searchdescription=Поиск %S для ваших слов.
+ubiquity.cmdutils.searchcmd=Поиск %S для: <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Выполнение букмарклета <strong>%S</strong>.
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=Вы знаете, что у вас есть команды Ubiquity для этого сайта?
+ubiquity.feedmanager.showme=Показать!
+ubiquity.feedmanager.dontremind=Не напоминать в будущем для этого веб-сайта
+ubiquity.feedmanager.newcommandfound=Эта страница содержит команды для Ubiquity. Если вы хотите подписаться на них, нажмите на кнопку справа.
+ubiquity.feedmanager.subscribe=Подписаться...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=Сохранить ваше оформление
+ubiquity.skinsvc.installskin=Установить...
+ubiquity.skinsvc.newskinfound=Эта страница содержит оформление для Ubiquity. Если вы хотите установить его, нажмите на кнопку справа.
+ubiquity.skinsvc.skinchanged=Тема оформления была изменена!
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Эта страница содержит пользовательский стиль для Stylish, который Ubiquity может использовать. Если вы хотите на него подписаться, нажмите на кнопку справа.
+ubiquity.stylishfeedplug.subscriptionsuccess=Успешная подписка на пользовательский стиль!
