--- a/ubiquity/chrome/locale/ru-RU/devubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/devubiquity.properties
@@ -1,1 +1,47 @@
-# This file is just a placeholder for localizations to dev tools
+#
+
+ubiquity.quicklaunch.sorrymessage=Извините, но, судя по всему, вы не используется Mac OS X. Эта функция ещё не доступна.
+ubiquity.quicklaunch.enabledefault=Включить Быстрый запуск
+ubiquity.quicklaunch.enablerunning=Быстрый запуск уже включён.
+ubiquity.quicklaunch.enableconfirm=Быстрый запуск включён.
+ubiquity.quicklaunch.erorr=Произошла ошибка. Извините!
+ubiquity.playpen.caller=вызывающая процедура:
+ubiquity.playpen.combo=комбинация:
+ubiquity.playpen.argstring=аргументы:
+ubiquity.playpen.score=балл:
+ubiquity.playpen.multiplier=множитель:
+ubiquity.playpen.noscore=нет балла
+ubiquity.playpen.null=null
+ubiquity.playpen.done=выполнено
+ubiquity.playpen.duration=Длительность:
+ubiquity.playpen.average=В среднем:
+ubiquity.playpen.step=шаг
+ubiquity.playpen.winner=победитель
+ubiquity.playpen.role=роль:
+ubiquity.playpen.name=имя:
+ubiquity.playpen.nountype=тип имени:
+ubiquity.playpen.step1=шаг 1: разделить на слова
+ubiquity.playpen.step2=шаг 2: выбрать возможные глаголы
+ubiquity.playpen.step3=шаг 3: выбрать возможные клитики (TODO)
+ubiquity.playpen.step4=шаг 4: распределить по аргументами
+ubiquity.playpen.step5=шаг 5: подстановка анафоры
+ubiquity.playpen.step6=шаг 6: подставить нормализованные аргументы
+ubiquity.playpen.step7=шаг 7: применить к дополнениям другие роли в запросах без глагола
+ubiquity.playpen.step8=шаг 8: предложить глаголы
+ubiquity.playpen.step9=шаги 9-11: завершение
+ubiquity.playpen.parsespossible=возможные типы анализов
+ubiquity.playpen.parsedverbs=анализы с глаголами
+ubiquity.playpen.parsednouns=анализы с загруженными и оценёнными предположениями имен
+ubiquity.testsuite.testsingular=тест
+ubiquity.testsuite.testplural=тесты
+ubiquity.testsuite.runerror=Ошибка при выполнении набора тестов: %S
+ubiquity.tuner.ScoringGuess=В терминах гипотез:
+ubiquity.tuner.Guess1=Спорно.
+ubiquity.tuner.Guess2=Возможно.
+ubiquity.tuner.Guess3=Вероятно.
+ubiquity.tuner.Guess4=Идеально!
+ubiquity.tuner.ScoringMatch=В терминах совпадений:
+ubiquity.tuner.Match1=Плохо
+ubiquity.tuner.Match2=Нормально.
+ubiquity.tuner.Match3=Хорошо.
+ubiquity.tuner.Match4=Точно!
