--- a/ubiquity/chrome/locale/zh-CN/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/aboutubiquity.properties
@@ -38,12 +38,12 @@ ubiquity.showhidehelp.hide=隐藏帮助
 
 # chrome://ubiquity/content/settings.xhtml
 
-ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.notifybadmodifier=你必须有一个辅助键 SHIFT CTRL ALT 或 META。
 ubiquity.prefkeys.clickhere=点击此处更改
-ubiquity.prefkeys.confirmchange=你的按键已更改为
+ubiquity.prefkeys.confirmchange=你的按键已更改为 %S。
 ############################
 
-ubiquity.prefkeys.pressyourcombo=按您的组合...
+ubiquity.prefkeys.pressyourcombo=按下您的组合键...
 ############################
 
 # confirm-add-js.js
@@ -51,7 +51,7 @@ ubiquity.prefkeys.pressyourcombo=按您的组合...
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=取消订阅
-ubiquity.cmdlist.feedupdated=更新这个订阅是可用。
+ubiquity.cmdlist.feedupdated=更新这个收取点是可用。
 ubiquity.cmdlist.viewsource=查看代码
 ubiquity.cmdlist.viewfeedsource=查看自动更新代码
 ubiquity.cmdlist.localetemplate=获取本地化模板
@@ -62,7 +62,7 @@ ubiquity.cmdlist.contributions=捐款 %S
 ubiquity.cmdlist.homepage=首页
 ubiquity.cmdlist.viewmoreinfo=查看详细信息在 %S
 ubiquity.cmdlist.oldparsertitle=此命令没有加载是因为它不兼容解析器 2。
-ubiquity.cmdlist.resubscribe=resubscribe
+ubiquity.cmdlist.resubscribe=重新订阅
 ubiquity.cmdlist.purge=清理
 ############################
 
@@ -81,7 +81,7 @@ ubiquity.subscription.successheader=订阅成功
 ubiquity.settings.restartfirefox=这个改变将在重新启动 Firefox 后生效。
 ubiquity.settings.opennewwindows=这个改变将在你打开的新窗口生效。
 ubiquity.settings.skinsaved=你的皮肤已保存！
-ubiquity.settings.skinerror=保存你的皮肤出错。
+ubiquity.settings.skinerror=保存你的皮肤时出错。
 ubiquity.settings.skinauthor=创建人 %S
 ubiquity.settings.skinlicense=许可证 %S
 ubiquity.settings.viewskinsource=查看源代码
