--- a/ubiquity/chrome/locale/zh-CN/coreubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/coreubiquity.properties
@@ -1,34 +1,36 @@
+extensions.ubiquity@labs.mozilla.com.description=一个扩展允许在 Firefox 里使用动态命令。
 # This file is just a placeholder for localizations to core Ubiquity
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=键入命令的名称后按Enter执行，或使用 <strong>help</strong> 命令来获得帮助。
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+ubiquity.cmdutils.searchdescription=你的话中搜索 %S 。
+ubiquity.cmdutils.searchcmd=搜索 %S 在：<strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=运行 <strong>%S</strong> 书签。
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=您是否知道在此网站上有一个 Ubiquity 命令？
+ubiquity.feedmanager.showme=查看我！
+ubiquity.feedmanager.dontremind=对本网站不要再次提醒我
+ubiquity.feedmanager.newcommandfound=此页面包含 Ubiquity 命令。如果您想订阅它们，请按一下在右边的按钮。
+ubiquity.feedmanager.subscribe=订阅...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=保存您的皮肤
+ubiquity.skinsvc.installskin=安装...
+ubiquity.skinsvc.newskinfound=此页面包含一个 Ubiquity 皮肤。如果您想安装这个皮肤，请按一下在右边的按钮。
+ubiquity.skinsvc.skinchanged=您的皮肤已经改变！
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=此页面包含一个 Ubiquity 可运行的 Stylish userstyle。如果您想订阅它，请按一下在右边的按钮。
+ubiquity.stylishfeedplug.subscriptionsuccess=Userstyle 订阅成功！
