--- a/ubiquity/chrome/locale/zh-CN/devubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/devubiquity.properties
@@ -1,2 +1,41 @@
 # This file is just a placeholder for localizations to dev tools
 
+ubiquity.quicklaunch.sorrymessage=很抱歉，但似乎你不使用 OS X。此功能尚未推向市场。
+ubiquity.quicklaunch.enabledefault=启用桌面快速启动
+ubiquity.quicklaunch.enablerunning=桌面快速启动已启动。
+ubiquity.quicklaunch.enableconfirm=桌面快速启动现在已经启动。
+ubiquity.quicklaunch.erorr=应答，发生错误，对不起！
+ubiquity.playpen.caller=访问者：
+ubiquity.playpen.combo=组合：
+ubiquity.playpen.score=得分：
+ubiquity.playpen.multiplier=乘法：
+ubiquity.playpen.noscore=没有评分
+ubiquity.playpen.null=无效
+ubiquity.playpen.done=完成
+ubiquity.playpen.duration=持续时间：
+ubiquity.playpen.average=平均值：
+ubiquity.playpen.step=步骤
+ubiquity.playpen.winner=胜利者
+ubiquity.playpen.role=作用：
+ubiquity.playpen.name=名称：
+ubiquity.playpen.step1=步骤 1：分词
+ubiquity.playpen.step2=步骤 2：选择可能动词
+ubiquity.playpen.step4=步骤 4：分组到参数
+ubiquity.playpen.step5=步骤 5：参数替换
+ubiquity.playpen.step6=步骤 6：替换正常参数
+ubiquity.playpen.step7=步骤 7：没有动词解析的适用对象到其他作用
+ubiquity.playpen.step8=步骤 8：建议动词
+ubiquity.playpen.step9=步骤 9-11：完成
+ubiquity.playpen.parsespossible=可能解析
+ubiquity.playpen.parsedverbs=解析和动词
+ubiquity.testsuite.testsingular=测试
+ubiquity.testsuite.testplural=测试
+ubiquity.testsuite.runerror=运行测试组出错：%S
+ubiquity.tuner.Guess1=可疑。
+ubiquity.tuner.Guess2=可能的。
+ubiquity.tuner.Guess3=很可能的。
+ubiquity.tuner.Guess4=完美！
+ubiquity.tuner.Match1=差。
+ubiquity.tuner.Match2=可以。
+ubiquity.tuner.Match3=好。
+ubiquity.tuner.Match4=精确！
