--- a/ubiquity/chrome/locale/fr/coreubiquity.properties
+++ b/ubiquity/chrome/locale/fr/coreubiquity.properties
@@ -1,34 +1,36 @@
+extensions.ubiquity@labs.mozilla.com.description=Une extension qui permet d'utiliser des commandes dynamiques avec Firefox.
 # This file is just a placeholder for localizations to core Ubiquity
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=Saisissez le nom de la commande et appuyez sur Entrée pour l'exécuter, ou <strong>help</strong> obtenir de l'aide.
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+ubiquity.cmdutils.searchdescription=Recherche %S pour vos mots.
+ubiquity.cmdutils.searchcmd=Recherche %S pour : <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Exécute le marque-page scripté <strong>%S</strong>.
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=Savez-vous qu'il existe une commande Ubiquity pour ce site Web ?
+ubiquity.feedmanager.showme=Montrez-la-moi !
+ubiquity.feedmanager.dontremind=Ne plus me le signaler pour ce site Web
+ubiquity.feedmanager.newcommandfound=Cette page contient des commandes Ubiquity. Si vous souhaitez vous y abonner, merci de cliquer sur le bouton de droite.
+ubiquity.feedmanager.subscribe=S'abonner…
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=Enregistrer votre thème
+ubiquity.skinsvc.installskin=Installer…
+ubiquity.skinsvc.newskinfound=Cette page contient un thème Ubiquity. Si vous souhaitez l'installer, merci de cliquer sur le bouton situé à droite.
+ubiquity.skinsvc.skinchanged=Votre thème a été modifié !
+#
 
-# /modules/stylish_feed_plugin.js
+#
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Cette page contient un style utilisateur (Userstyle) Stylish. Ubiquity peut l'interpréter. Si vous souhaitez vous y abonner, veuillez cliquer sur le bouton à droite.
+ubiquity.stylishfeedplug.subscriptionsuccess=Abonnement à ce style utilisateur (Userstyle) réussi !
