--- a/ubiquity/chrome/locale/ja/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ja/coreubiquity.properties
@@ -1,34 +1,29 @@
 extensions.ubiquity@labs.mozilla.com.description=[てすと] Firefox += CLI
+#
 
-# /modules/cmdmanager.js
+#
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
-############################
+ubiquity.cmdmanager.defaulthelp=コマンド名を入力して Enter キーを押すと実行します。<strong>ヘルプ</strong> コマンドで説明が表示されます。
+#
 
-# /modules/cmdutils.js
+#
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
-############################
+#
 
-# /modules/feedmanager.js
+#
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
-############################
+ubiquity.feedmanager.didyouknow=このサイト用の Ubiquity コマンドが利用できます。
+ubiquity.feedmanager.showme=見せて！
+ubiquity.feedmanager.dontremind=このサイトでは表示しない
+ubiquity.feedmanager.newcommandfound=このページは Ubiquity コマンドを配信しています。コマンドを利用するには右のボタンをクリックしてください。
+ubiquity.feedmanager.subscribe=インストール...
+#
 
-# /modules/skinsvc.js
+#
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
-############################
+ubiquity.skinsvc.saveyourskin=カスタムスキンを保存
+ubiquity.skinsvc.installskin=インストール...
+ubiquity.skinsvc.newskinfound=このページには Ubiquity のスキンが表示されています。スキンをインストールするには右側のボタンをクリックしてください。
+ubiquity.skinsvc.skinchanged=スキンを変更しました。
+#
 
-# /modules/stylish_feed_plugin.js
-
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
