--- a/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pl-PL/coreubiquity.properties
@@ -1,34 +1,36 @@
-# This file is just a placeholder for localizations to core Ubiquity
+extensions.ubiquity@labs.mozilla.com.description=Rozszerzenie umożliwiające używanie dynamicznych poleceń w Firefoksie.
+############################
 
 # /modules/cmdmanager.js
 
-ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
+ubiquity.cmdmanager.defaulthelp=Wprowadź nazwę polecenia i naciśnij [Enter], aby je wykonać lub naciśnij <strong>pomoc</strong>, aby otrzymać pomoc.
 ############################
 
 # /modules/cmdutils.js
 
-ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
+ubiquity.cmdutils.searchdescription=Przeszukuje %S w poszukiwaniu Twoich słów.
+ubiquity.cmdutils.searchcmd=Przeszukuje %S w poszukiwaniu: <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Wykonuje skryptozakładkę <strong>%S</strong>
 ############################
 
 # /modules/feedmanager.js
 
-ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
-ubiquity.feedmanager.showme=Show me!
-ubiquity.feedmanager.dontremind=Don't remind me again for this website
-ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
-ubiquity.feedmanager.subscribe=Subscribe...
+ubiquity.feedmanager.didyouknow=Czy na pewno masz polecenie Ubiquity dla tej witryny?
+ubiquity.feedmanager.showme=Pokaż!
+ubiquity.feedmanager.dontremind=Nie przypominaj mi o tej witrynie
+ubiquity.feedmanager.newcommandfound=Ta strona zawiera polecenia Ubiquity. Jeśli chcesz je subskrybować, naciśnij przycisk po prawej stronie.
+ubiquity.feedmanager.subscribe=Subskrybuj…
 ############################
 
 # /modules/skinsvc.js
 
-ubiquity.skinsvc.saveyourskin=Save Your Skin
-ubiquity.skinsvc.installskin=Install...
-ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
+ubiquity.skinsvc.saveyourskin=Zapisz swój motyw
+ubiquity.skinsvc.installskin=Instaluj…
+ubiquity.skinsvc.newskinfound=Ta strona zawiera motyw Ubiquity. Jeśli chcesz go zainstalować, naciśnij przycisk po prawej stronie.
+ubiquity.skinsvc.skinchanged=Motyw został zmieniony!
 ############################
 
 # /modules/stylish_feed_plugin.js
 
-ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
-ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
+ubiquity.stylishfeedplug.newuserstylefound=Ta strona zawiera styl Stylish, który może być uruchomiony przez Ubiquity. Jeśli chcesz je subskrybować, naciśnij przycisk po prawej stronie.
+ubiquity.stylishfeedplug.subscriptionsuccess=Styl został zasubskrybowany!
