--- a/ubiquity/chrome/locale/zh-CN/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/zh-CN/aboutubiquitytutorial.properties
@@ -5,6 +5,7 @@ tutorial.fromthestart=点击这里从教程最初开始
 tutorial.fromthemiddle=从教程中间开始：
 tutorial.howtostart=如何启动 Ubiquity
 tutorial.previews=预览(天气命令)
+tutorial.abbreviations=缩写(计算)
 tutorial.suggestions=建议名单(计算,Google)
 tutorial.selecting=选择,执行(翻译,地图)
 tutorial.morecommands=如何获得帮助和了解更多命令
@@ -13,7 +14,7 @@ tutorial.morecommands=如何获得帮助和了解更多命令
 tutorial.stage01h1=Ubiquity 教程，1/6：如何启动 Ubiquity
 tutorial.stage01p1=欢迎来到 Ubiquity 教程。
 tutorial.stage01p2=让我们开始吧。召唤 Ubiquity，现在就做：
-tutorial.stage01p3=按住
+tutorial.stage01p3=按住 %S 键并按下 %S 键。
 ##### Stage 02
 
 tutorial.stage02p1=这是 Ubiquity <strong>输入框</strong>。您可以在这里输入命令。
@@ -22,108 +23,108 @@ tutorial.stage02p2=如果你想离开 Ubiquity 而不是提供一个命令，<st
 
 tutorial.stage03h1=Ubiquity 教程，2/6：天气命令和预览
 tutorial.stage03p1=好了，现在让我们再来学习一个命令，再次召唤 Ubiquity...
-tutorial.stage03p2=（请记住，<strong>按住
+tutorial.stage03p2=（请记住，<strong>按住 %S 键并按下 %S 键</strong>。）
 ##### Stage 04
 
-tutorial.stage04p1=现在输入单词<strong>weather</strong>...
+tutorial.stage04p1=现在输入单词 <strong>weather</strong> ...
 ##### Stage 05
 
-tutorial.stage05p1=即使在您完成输入，<strong>预览区</strong> 显示一个您的命令的预览结果—在这种情况下，一个天气预报。
-tutorial.stage05p2=如果您不输入一个位置，那么<em>weather</em>命令需要推测您在何处。
-tutorial.stage05p3=现在让我们给它一个位置：<strong>输入一个空格，然后输入 “near chicago”</strong>。（因此您输入的完整的命令为：“weather near chicago”）
+tutorial.stage05p1=即使在您完成输入，<strong>预览区</strong> 显示一个您的命令的预览结果 &#8212; 在这种情况下，一个天气预报。
+tutorial.stage05p2=如果您不输入一个位置，那么 <em>weather</em> 命令需要推测您在何处。
+tutorial.stage05p3=现在让我们给它一个位置：<strong>输入一个空格，然后输入 'near chicago'</strong>。（因此您输入的完整的命令为：'weather near chicago'）
 ##### Stage 06
 
-tutorial.stage06p1=看看效果？可以随时删除"chicago"并尝试一些其他地点。
-tutorial.stage06p2=当您完成检查天气，<strong>按下Escape键。</strong>
+tutorial.stage06p1=看看效果？可以随时删除 "chicago" 并尝试一些其他地点。
+tutorial.stage06p2=当您完成检查天气，<strong>按下 Escape 键。</strong>
 ##### Stage 07 (part 3 of 6) #####
 
 tutorial.stage07h1=Ubiquity 教程，3/6：计算命令和缩写
 tutorial.stage07p1=再次召唤 Ubiquity，我们将学习更多的命令。
 ##### Stage 08
 
-tutorial.stage08p1=这一次，<strong>输入刚才信的 'c'</strong>（小写）并看看会发生什么。
+tutorial.stage08p1=这一次，<strong>输入字母 'c'</strong>(小写)并看看会发生什么。
 ##### Stage 09
 
-tutorial.stage09p1=这 Ubiquity<strong>建议名单</strong>显示命令开始的文字 'C'。
-tutorial.stage09p2=比如说，您希望<em>calculate</em>命令。您不必输入整个命令的名字。只是<strong>键入字母 'al'</strong>（所以说输入 <strong>'cal'</strong>）。
+tutorial.stage09p1=这个 Ubiquity <strong>建议列表</strong>显示命令开始的字母 'C'。
+tutorial.stage09p2=比如说，您希望 <em>calculate</em> 命令。 您不必输入整个命令的名字。 只是 <strong>键入字母 'al'</strong> （所以你的完整输入应该是 <strong>'cal'</strong> ）。
 ##### Stage 10
 
-tutorial.stage10p1=现在<strong>键入一个空格，然后键入 22/7</strong>（所以说你的输入的大概是<strong>'cal 22/7'</strong>。）
+tutorial.stage10p1=现在 <strong>键入一个空格，然后键入 22/7</strong> （你的完整输入应该是 <strong>'cal 22/7'</strong>。）
 ##### Stage 11
 
-tutorial.stage11p1=这个 <em>calculate</em>命令将显示您的结果，您键入以下任何算术表达式。
-tutorial.stage11p2=当您完成试验<em>calculate</em><strong>击中Escape键</strong>
+tutorial.stage11p1=这个 <em>calculate</em> 命令将显示您的结果，您键入在这里的任何算术表达式。
+tutorial.stage11p2=当您完成试验 <em>calculate</em> <strong>按下 Escape 键。</strong>
 ##### Stage 12 (part 4 of 6) #####
 
 tutorial.stage12h1=Ubiquity 教程，4/6：Google 命令和建议列表
 tutorial.stage12p1=再次召唤 Ubiquity...
 ##### Stage 13
 
-tutorial.stage13p1=比如说，您要搜索Google for cheese。
-tutorial.stage13p2=输入字母 'g'，一个空格，和'cheese'这个词。
-tutorial.stage13p3=（像，'g cheese'）。
+tutorial.stage13p1=比如说，您要搜索 Google for cheese。
+tutorial.stage13p2=输入字母 'g'，一个空格，和 'cheese' 这个词。
+tutorial.stage13p3=（像是，'g cheese'）。
 ##### Stage 14
 
-tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
-tutorial.stage14p2=<strong>tap the down-arrow key</strong> until the <em>google</em> command is hilighted.
+tutorial.stage14p1=在建议列表，你可以看到几个命令开始用 'g'。您可以使用向上箭头(↑)和向下箭头(↓)键来移动选择建议名单。立刻尝试：
+tutorial.stage14p2=<strong>按下向下箭头(↓)键</strong> 直到 <em>google</em> 命令是 hilighted。
 ##### Stage 15
 
-tutorial.stage15p1=The <em>Google</em> command preview shows a snippet from each search result matching your search term.
-tutorial.stage15p2=Those titles are links &#8212; you can click on one of them to open the page in a new tab.
-tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
+tutorial.stage15p1=这 <em>Google</em> 命令预览显示片段从每个符合您搜索字词的搜索结果。
+tutorial.stage15p2=那些标题的链接 — 您可以按一下其中之一来在新标签页打开这个页面。
+tutorial.stage15p3=当您完成时，关闭该网页并回到这里，或只是 <strong>按下 escape</strong> 来继续教程。
 ##### Stage 16 (part 5 of 6) #####
 
 tutorial.stage16ah1=5/6：选择和执行
-tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
-tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
-tutorial.stage16bp1=现在 <strong>输入 'map'</strong>.
-tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
-tutorial.stage16cp2=当您完成尝试地图，<strong>按 escape</strong>。
+tutorial.stage16ap1=说你浏览的网页及您遇到的演讲 — 就像一个在下面的框中 — 和您想看到它在地图上。
+tutorial.stage16ap2=Ubiquity 命令可以使您选取的文字。试试：使用鼠标 在 <strong>选择地址</strong> 下。那么 <strong>召唤 Ubiquity</strong>。
+tutorial.stage16bp1=现在 <strong>输入 'map'</strong>。
+tutorial.stage16cp1=预览显示一个 Google Map 的地址。你可以按一下这个地图来使它更大；那么你就可以在地图上拖拽来左右滚动。现在尝试。
+tutorial.stage16cp2=当您完成尝试地图，<strong>按下 escape</strong>。
 ##### Stage 17
 
-tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
-tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
-tutorial.stage17p3=(类型 'translate'，或只是 'tr').
+tutorial.stage17p1=作为另一个例子，在一个语言无法读取 说你浏览的网页和你写的一些东西 — 像是在下面的日文。你可以使用 Ubiquity 获得翻译。
+tutorial.stage17p2=首先 <strong>选择下面的日文</strong>，然后召唤 Ubiquity 并 <strong>使用 <em>translate</em> 命令</strong>。
+tutorial.stage17p3=(键入 'translate'，或只是 'tr').
 ##### Stage 18
 
-tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
+tutorial.stage18p1=在这一点上，您可以输入你想要翻译的话来进行 Ubiquity 翻译。但是，正如你可以看到在预览区，Ubiquity 您选择的已翻译的话。
 tutorial.stage18p2=然后，<strong>按下 Enter 键</strong>来执行命令。
 ##### Stage 19
 
-tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
-tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
+tutorial.stage19p1=如何用这个翻译查询您选择的日文 <em>replaced</em>。这是因为你执行命令是按 'Enter'。
+tutorial.stage19p2=当您执行每个命令时都没有什么不同。多数情况下，这将翻开新的一页，或对当前也进行一些改变。
 tutorial.stage19p3=点击这里继续
 ##### Stage 20
 
-tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
-tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
+tutorial.stage20p1=让我们做一个例子。你浏览网页时遇到不熟悉的单词 — 就像一个在下面的框中 — 而您想要查找。
+tutorial.stage20p2=在下面的框中选择这个词并召唤 Ubiquity。
 ##### Stage 21
 
-tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
+tutorial.stage21p1=现在 <strong>使用 Google 的命令</strong> (输入 'google' 或只是 'goo')。
 ##### Stage 22
 
-tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
-tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
+tutorial.stage22p1=现在，如果这预览的在 <em>google</em> 命令告诉你什么你想要知道，然后你就大功告成了 — 您可以关闭 Ubiquity 并转到您的方式。
+tutorial.stage22p2=但是如果你想了解更多信息，您可以利用Enter键来执行这 <em>google</em> 命令，这将在新标签页打开搜索结果。
 tutorial.stage22p3=就看你的。
 ##### Stage 23 (part 6 of 6) #####
 
 tutorial.stage23h1=6/6：获得帮助并学习更多命令
-tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
+tutorial.stage23p1=到目前为止你已经学会了 <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> 命令。这是一个好的开始，但也有几十个命令包含在 Ubiquity — 另外，您可以找到更多的网站。
 tutorial.stage23p2=您如何找出可供使用的命令？
-tutorial.stage23p3=一种方法是使用<em>help</em>命令。
+tutorial.stage23p3=一种方法是使用 <em>help</em> 命令。
 tutorial.stage23p4=召唤 Ubiquity...
 ##### Stage 24
 
-tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
-tutorial.stage24p2=类型 'help tab'。
+tutorial.stage24p1=假设你想知道是否有什么命令处理标签。您可以使用 <em>help</em> 命令如下所示：
+tutorial.stage24p2=输入 'help tab'。
 ##### Stage 25
 
-tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
-tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
-tutorial.stage25p3=当您完成，<strong>键入 escape</strong>。
+tutorial.stage25p1=在建议列表，在它们的名字你可以看到所有的命令，有 'tab'。
+tutorial.stage25p2=使用箭头键移动选择建议列表。预览区显示当前高亮命令的帮助信息。
+tutorial.stage25p3=当您完成，<strong>按 escape</strong>。
 ##### Stage 26
 
-tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
-tutorial.stage26p2=这是最后的教程。一旦你去命令列表页，您自己试验新的命令，按照自己的学习进度。
+tutorial.stage26p1=最后，还有 <em>list ubiquity commands</em> 命令。此命令将带您到一个网页，该网页显示的每一个 Ubiquity 命令都已安装。浏览命令列表页面您可以学到各种有用的事情！
+tutorial.stage26p2=这是最后的教程。一旦你去命令列表页，您需要自己试验新的命令，按照自己的学习进度。
 tutorial.stage26p3=召唤 Ubiquity，输入 'list'，并按Enter键执行。
 tutorial.stage26p4=再见！
